@@ -1,5 +1,5 @@
 /*
- *  $Id: setup.c,v 1.9 2009/09/18 10:43:26 schmirl Exp $
+ *  $Id: setup.c,v 1.10 2010/06/08 05:55:17 schmirl Exp $
  */
  
 #include <vdr/menuitems.h>
@@ -13,7 +13,6 @@ cStreamdevClientSetup::cStreamdevClientSetup(void) {
 	StartClient   = false;
 	RemotePort    = 2004;
 	StreamFilters = false;
-	SyncEPG       = false;
 	HideMenuEntry = false;
 	MinPriority   = -1;
 	MaxPriority   = MAXPRIORITY;
@@ -30,7 +29,6 @@ bool cStreamdevClientSetup::SetupParse(const char *Name, const char *Value) {
 	}
 	else if (strcmp(Name, "RemotePort") == 0)    RemotePort = atoi(Value);
 	else if (strcmp(Name, "StreamFilters") == 0) StreamFilters = atoi(Value);
-	else if (strcmp(Name, "SyncEPG") == 0)       SyncEPG = atoi(Value);
 	else if (strcmp(Name, "HideMenuEntry") == 0) HideMenuEntry = atoi(Value);
 	else if (strcmp(Name, "MinPriority") == 0)   MinPriority = atoi(Value);
 	else if (strcmp(Name, "MaxPriority") == 0)   MaxPriority = atoi(Value);
@@ -46,7 +44,6 @@ cStreamdevClientMenuSetupPage::cStreamdevClientMenuSetupPage(void) {
 	Add(new cMenuEditIpItem  (tr("Remote IP"),            m_NewSetup.RemoteIp));
 	Add(new cMenuEditIntItem (tr("Remote Port"),         &m_NewSetup.RemotePort, 0, 65535));
 	Add(new cMenuEditBoolItem(tr("Filter Streaming"),    &m_NewSetup.StreamFilters));
-	Add(new cMenuEditBoolItem(tr("Synchronize EPG"),     &m_NewSetup.SyncEPG));
 	Add(new cMenuEditIntItem (tr("Minimum Priority"),    &m_NewSetup.MinPriority, -1, MAXPRIORITY));
 	Add(new cMenuEditIntItem (tr("Maximum Priority"),    &m_NewSetup.MaxPriority, -1, MAXPRIORITY));
 	SetCurrent(Get(0));
@@ -68,7 +65,6 @@ void cStreamdevClientMenuSetupPage::Store(void) {
 		SetupStore("RemoteIp",    m_NewSetup.RemoteIp);
 	SetupStore("RemotePort",    m_NewSetup.RemotePort);
 	SetupStore("StreamFilters", m_NewSetup.StreamFilters);
-	SetupStore("SyncEPG",       m_NewSetup.SyncEPG);
 	SetupStore("HideMenuEntry", m_NewSetup.HideMenuEntry);
 	SetupStore("MinPriority",   m_NewSetup.MinPriority);
 	SetupStore("MaxPriority",   m_NewSetup.MaxPriority);
